<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vocab Builder</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="search_hint">Search</string>

    <string name="action_synonyms">Synonyms</string>
    <string name="action_similar">Tagged</string>
    <string name="action_hide">Hide</string>
    <string name="enable_pro">Enable Pro Mode</string>

    <string name="enable_notifications">Enable notifications</string>
    <string name="enable_notifications_desc">Enable notification information message</string>
    <string name="enable_sound_desc">Play sound on notification</string>
    <string name="enable_sound">Play sound</string>
    <string name="enable_vibrate_desc">Vibrate phone on notification</string>
    <string name="enable_vibrate">Vibrate phone</string>
    <string name="enable_led_desc">Flash lights on notification</string>
    <string name="enable_led">LED</string>
    <string name="enable_pro_desc">Enable Pro mode to add/edit/delete words yourself</string>
    <string name="view_hidden_words_desc">View hidden words and unhide them</string>
    <string name="view_hidden_words">View hidden words</string>
    <string name="words_sort_order">Sort order of words</string>
    <string name="words_sort_order_desc">Set sort order to be either alphabetical or by difficulty</string>
    <string name="customize_vocabpro">Customize VocabPro</string>
    <string name="customize_vocabpro_desc">Customize VocabPro according to your learning preferences</string>
    <string name="configuration">Configuration</string>
    <string name="words_mode">Words Look and Feel</string>
    <string name="words_mode_desc">Customize if words are to be shown as flashcards or standard dictionary</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_desc">Customize notification settings according to your learning preferences</string>
    <string name="notification_preference">Learning Notifications</string>
    <string name="notification_preference_desc">Customize notification according to your learning preferences</string>

    <string name="every1hour">Every 1 hour</string>
    <string name="every2hour">Every 2 hours</string>
    <string name="every4hour">Every 4 hours</string>
    <string name="every6hour">Every 6 hours</string>
    <string name="every12hour">Every 12 hours</string>
    <string name="every24hour">Every 24 hours</string>
    <string name="notification_interval">Notification Interval</string>
    <string name="notification_interval_desc">Select the interval at which notification would appear to help you learn words</string>

    <string name="action_about">About</string>
    <string name="action_about_desc">View information about this app</string>

    <string name="follow_twitter">Follow me on Twitter</string>
    <string name="interval_default">300</string>
    <string name="select_notification_words">Select Category</string>
    <string name="select_notification_words_desc">Select the category of words for notification based on stars</string>
    <string name="words_sort_order_default">0</string>
    <string name="words_mode_default">0</string>
    <string name="select_notification_words_default">0</string>

    <string name="pick_theme">Pick Theme</string>
    <string name="themes">Theme</string>
    <string name="themes_desc">Set the theme for app</string>
    <string name="pick_theme_default">0</string>
    <string name="default_theme">0</string>

    <string name="feedback_button">Feedback</string>
    <string name="rate_button">Rate</string>
    <string name="whatsnew_tab" formatted="false">What\'s new</string>
    <string name="send_email">Send Email</string>
    <string name="allow_multiple_notifications">Allow multiple notifications</string>
    <string name="allow_multiple_notifications_desc">If selected the app will show a completely new notification rather than replacing the old one.</string>
    <string name="notification_screen_on">Turn Screen On</string>
    <string name="notification_screen_on_desc">If selected, the screen will automatically turn on when notification arrives. Note that selecting this option can have negative impact on battery life.</string>
    <string name="add_word">Add</string>
    <string name="action_edit">Edit</string>
    <string name="word">Word</string>
    <string name="meaning">Meaning</string>
    <string name="action_save">Save</string>
    <string name="empty_word_error">Word meaning or name cannot be empty</string>
    <string name="action_view">View</string>
    <string name="set">Set</string>
    <string name="dismiss">Close</string>
    <string name="action_sortalpha_asc">Alphabetical (Asc)</string>
    <string name="action_sortalpha_desc">Alphabetical (Desc)</string>
    <string name="action_sortstar_asc">Starred (Asc)</string>
    <string name="action_sortstar_desc">Starred (Desc)</string>
    <string name="misc">WordList Maintainence</string>
    <string name="misc_desc">Perform batch tasks on WordList</string>
    <string name="revert_database">Revert Word database</string>
    <string name="revert_database_desc">Revert word database to its original state. Caution: You will loose your added words, any customizations.</string>
    <string name="star_all">Star All Words</string>
    <string name="star_all_desc">Mark all words as starred</string>
    <string name="unstar_all">Unstar all Words</string>
    <string name="unstar_all_desc">Mark all words as unstarred</string>
    <string name="star_all_msg">Are you sure you want to star all words ?</string>
    <string name="unstar_all_msg">Are you sure you want to unstar all words?</string>
    <string name="revert_database_msg">Are you sure you want to restore original word list?</string>
    <string name="original_words">Original Words</string>
    <string name="your_words">Your Words</string>
    <string name="total_words">Total Words</string>
    <string name="statistics">Statistics</string>
    <string name="starred_words">Starred</string>
    <string name="unstarred_words">Unstarred</string>
    <string name="notified_words">Notified</string>
    <string name="count">Count</string>
    <string name="percent">Percent</string>
    <string name="halfstarred_words">HalfStarred</string>
    <string name="hidden">Hidden</string>
    <string name="action_unhide">Unhide</string>
    <string name="action_delete">Delete</string>
    <string name="restart_app">This setting change requires app restart. Do you want to restart now?</string>

</resources>
