<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_synonyms"
        android:orderInCategory="100"
        android:title="@string/action_synonyms"
        />

    <item
        android:id="@+id/action_similar"
        android:orderInCategory="100"
        android:title="@string/action_similar"
        />

    <group android:id="@+id/group_pro_context" android:visible="false">
        <item
            android:id="@+id/action_hide"
            android:orderInCategory="100"
            android:title="@string/action_hide"
            />

        <item
            android:id="@+id/action_edit"
            android:orderInCategory="100"
            android:title="@string/action_edit"
            />
    </group>

</menu>